alot has changed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,14 @@
     <style> .glyphicon-thumbs-up, .glyphicon-thumbs-down { cursor:pointer } </style>
   </head>
   <body ng-app="flapperNews">
+  	  <nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
+    <ul class="nav navbar-nav">
+      <li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
+      <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
+      <li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
+      <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
+    </ul>
+  </nav>
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <ui-view></ui-view>
@@ -17,6 +25,9 @@
         <div class="page-header">
             <h1>Flapper News</h1>
         </div>
+		<span ng-show="post.author">
+		  posted by <a>{{post.author}}</a> |
+		</span>
         <div ng-repeat="post in posts | orderBy: '-votes'">
             <span class="glyphicon glyphicon-thumbs-up"
                 ng-click="upvote(post)"></span>
