--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,16 @@
 <html>
   <head>
-    <title>MEAN App</title>
+    <title>Justin News</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
     <script src="app.js"></script>
     <style> .glyphicon-thumbs-up, .glyphicon-thumbs-down { cursor:pointer } </style>
   </head>
-  <body ng-app="flapperNews">
+  <body ng-app="justinNews">
+  	    <div class="row">
+        <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+  	<div class="container">
   	  <nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
     <ul class="nav navbar-nav">
       <li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
@@ -16,14 +19,13 @@
       <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
     </ul>
   </nav>
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
             <ui-view></ui-view>
         </div>
     </div>
+</div>
     <script type="text/ng-template" id="/home.html">
         <div class="page-header">
-            <h1>Flapper News</h1>
+            <h1>Justin News</h1>
         </div>
 		<span ng-show="post.author">
 		  posted by <a>{{post.author}}</a> |
@@ -74,7 +76,7 @@
     <!-- start of /register template -->
     <script type="text/ng-template" id="/register.html">
   <div class="page-header">
-    <h1>Flapper News</h1>
+    <h1>Justin News</h1>
   </div>
 
   <div ng-show="error" class="alert alert-danger row">
@@ -104,7 +106,7 @@
 <!-- start of /login template -->
 <script type="text/ng-template" id="/login.html">
   <div class="page-header">
-    <h1>Flapper News</h1>
+    <h1>Justin News</h1>
   </div>
 
   <div ng-show="error" class="alert alert-danger row">
