--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   </head>
   <body ng-app="justinNews">
   	    <div class="row">
-        <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+        <div class="center-block col-md-4" style="float: none; ">
   	<div class="container">
   	  <nav class="navbar navbar-default pull-right" ng-controller="NavCtrl">
     <ul class="nav navbar-nav">
