--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
 		<span ng-show="post.author">
 		  posted by <a>{{post.author}}</a> |
 		</span>
-        <div ng-repeat="post in posts | orderBy: '-votes'">
+        <div ng-repeat="post in posts | orderBy: '-upvotes'">
             <span class="glyphicon glyphicon-thumbs-up"
                 ng-click="upvote(post)"></span>
             {{post.votes}}
